css/style.css
:root {
  --base-color: #ffffff;
  --secondary-bg-color: #F7F7F7;
  --main-theme-color: #08A6E4;
  --vibrant-main-theme-color: #07ACE6;
  --secondary-theme-color: #FB3B64;
  --tertiary-theme-color: #55DFB4;
  --main-text-color: #000000;
  --info-text-color: #A5A5A5;
  --menu-shadow-color: #00000029;
  --element-shadow-color: #07ACE629;
  --offer-box-width: 27%;
  --offer-box-height: 60vh;
}


/* GENERAL STYLES */

* {
  box-sizing: border-box;
}

main {
  display: flex;
  flex-flow: column wrap;
  align-items: center;
  width: 100%;
}

section {
  display: flex;
  justify-content: center;
  width: 100%;
}

p, a {
  font-family: 'Open Sans', sans-serif;
}

a {
  text-decoration: none;
}

h1, h2, h3 {
  font-family: Raleway, sans-serif;
}

button {
  display: inline-block;
  cursor: pointer;
  outline: none;
  border: none;
}

.section-title {
  font-size: 36px;
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: 1352px;
  height: 100%;
}

.wrapper {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  flex-wrap: wrap;
  width: 100%;
}

.button {
  display: inline-block;
  font-weight: 700;
  color: var(--base-color);
  border-radius: 50px;
}

.button__main-theme {
  background: var(--main-theme-color);
}


/* HEADER */

.header {
  position: sticky;
  top: 0;
  z-index: 2;
  display: flex;
  justify-content: center;
  width: 100%;
  background: var(--base-color);
  box-shadow: 0 3px 6px var(--menu-shadow-color);
}

.header .wrapper {
  align-items: center;
  justify-content: space-between;
}

.header__logo {
  font-family: Raleway, sans-serif;
  font-weight: 300;
  font-size: 32px;
  color: var(--main-theme-color);
}

.page-nav {
  width: 40%;
}

.page-nav__list {
  display: flex;
  justify-content: space-between;
}

.page-nav__list-item a {
  display: inline-block;
  padding: 28px 12px;
  font-size: 11px;
  font-weight: 700;
  text-align: center;
  text-transform: uppercase;
  letter-spacing: 3px;
  color: var(--info-text-color);
  border-bottom: 3px solid var(--base-color);
}

.page-nav__list-item a:hover {
  color: var(--main-text-color);
  border-bottom: 3px solid var(--main-theme-color);
}


/* LANDING PAGE SECTION */

.landing-page {
  height: 100vh;
  background: var(--base-color);
}

.landing-page__img img {
  width: 100%;
}

.landing-page__title {
  font-size: 49px;
  color: var(--main-text-color);
}

.landing-page__text {
  margin: 30px;
  font-size: 16px;
  line-height: 22px;
  color: var(--main-text-color);
}

.button__cta-button {
  padding: 22px 155px;
}


/* WHY-US SECTION*/

.why-us {
  padding: 70px 0;
  background: var(--base-color);
}

.why-us .section-title {
  margin-bottom: 70px;
  text-align: center;
}

.why-us__article {
  display: flex;
  flex-flow: column wrap;
  align-items: center;
  padding-bottom: 20px;
  min-width: 33%;
}

.why-us__title {
  margin: 20px auto;
  font-size: 20px;
  letter-spacing: 6px;
  font-weight: 800;
}

.why-us__text {
  text-align: center;
  color: var(--info-text-color);
}

.why-us__img {
  position: relative;
  display: flex;
  align-items: center;
  height: 65px;
  width: 65px;
  border-radius: 50%;
}

.why-us__img img {
  position: absolute;
  left: 40%;
}

.why-us__article:first-of-type .why-us__img {
  background: var(--secondary-theme-color);
}

.why-us__article:nth-of-type(2) .why-us__img {
  background: var(--main-theme-color);
}

.why-us__article:nth-of-type(3) .why-us__img {
  background: var(--tertiary-theme-color);
}


/* BENEFITS SECTION */

.benefits {
  padding: 100px 0;
  background: var(--secondary-bg-color);
}

.benefits .container {
  justify-content: space-between;
}

.benefits .wrapper {
  justify-content: space-between;
  background: var(--base-color);
  padding: 30px;
  margin-bottom: 50px;
  min-height: 400px;
  max-width: 90%;
}

.benefits--border {
  border: 1px solid #E8E9ED;
  border-radius: 5px;
}

.benefits__article {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 15px;
  height: 100%;
  max-width: 500px;
}

.benefits__article::after {
   content: '';
   width: 66%;
   height: 3px;
 }

.benefits__text {
  margin: 50px auto;
  font-size: 16px;
  line-height: 22px;
}

.benefits__img {
  align-self: flex-end;
  position: relative;
  z-index: 0;
  padding: 20px;
}

.benefits__img img {
  max-width: 450px;
 }

.benefits__img::before {
  position: absolute;
  z-index: -1;
  content: '';
}

/* TOP BENEFIT BOX'S SQUARE SHAPE AND ARTICLE UNDERLINE */

.wrapper:first-of-type .benefits__img::before {
  top: -10%;
  right:  5%;
  width: 180px;
  height: 180px;
  background: var(--secondary-theme-color);
  border-radius: 41px;
  transform: rotateZ(45deg);
}

.wrapper:first-of-type .benefits__article::after {
  background: var(--secondary-theme-color);
}

/* MIDDLE BENEFIT BOX'S CIRCLE SHAPE AND ARTICLE UNDERLINE*/

.wrapper:nth-of-type(2) .benefits__img::before {
  top: 5%;
  left: 5%;
  height: 320px;
  width: 320px;
  background: var(--vibrant-main-theme-color);
  border-radius: 50%;
}

.wrapper:nth-of-type(2) .benefits__article::after {
  background: var(--vibrant-main-theme-color);
}

/* BOTTOM BENEFIT BOX'S STYLES */

.benefits--trumpet-wrapper {
  display: flex;
  justify-content: space-between;
  max-width: 90%;
}

.benefits--trumpet-wrapper .benefits__article::after {
  background: var(--tertiary-theme-color);
}

.benefits--trumpet-wrapper .wrapper {
  margin-bottom: 0;
  max-width: 55%;
}

.benefits--trumpet-wrapper .benefits__article {
  max-width: 100%;
}

.benefits__trumpet-img {
  display: flex;
  justify-content: center;
  align-items: center;
  max-width: 40%;
  height: 400px;
  background: var(--tertiary-theme-color);
}

.benefits__trumpet-img img {
  width: 90%;
}


/* OFFERS SECTION*/

.prices {
  padding: 50px 0;
  background: var(--base-color);
}

.prices .wrapper {
  align-items: center;
}

.offer {
  position: relative;
  display: flex;
  flex-direction:  column;
  align-items: center;
  justify-content: center;
  margin: 50px auto;
  padding: 30px;
  min-width: var(--offer-box-width);
  min-height: var(--offer-box-height);
  border-radius: 18px;
}

.offer__name {
  font-size: 20px;
  font-weight: 700;
}

.offer__price {
  padding: 20px;
  font-family: "Open Sans", sans-serif;
  font-size: 46px;
  font-weight: 300;
}

.offer--small-text {
  font-family: Raleway, sans-serif;
  font-size: 12px;
  font-weight: 700;
}

.offer__list {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 20px;
  font-family: "Open Sans", sans-serif;
  font-size: 14px;
}

.offer__list-item {
  position: relative;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding: 20px;
}

.offer__list-item--ok::before {
  position: absolute;
  left: -3px;
  display: inline-block;
  content: '';
  height: 11px;
  width: 11px;
  background: url("../assets/Ckechmark-1.svg") no-repeat center/cover;
}

.offer__list-item--not::before {
  position: absolute;
  left: -3px;
  display: inline-block;
  content: 'x';
  font-family: Raleway, sans-serif;
  font-size: 8px;
  font-weight: 700;
  text-align: center;
  color: var(--secondary-theme-color);
  height: 9px;
  width: 9px;
  border: 1px solid var(--secondary-theme-color);
  border-radius: 2px;
}

.offer__button {
  position: absolute;
  bottom: calc(-1 * (45px / 2));
  padding: 16px 65px;
  font-size: 13px;
  line-height: 15px;
}

/* LEFT-HAND OFFER BOX */

.offer:first-of-type {
  border: 2px solid var(--secondary-theme-color);
}

.offer:first-of-type .offer__price {
  color: var(--secondary-theme-color);
}

.offer:first-of-type .offer__button {
  background: var(--secondary-theme-color);
}


/* MIDDLE OFFER-BOX */

.offer:nth-of-type(2) {
  min-width: calc(var(--offer-box-width) + 50px);
  min-height: calc(var(--offer-box-height) + 130px);
  border: 2px solid var(--vibrant-main-theme-color);
  box-shadow: 5px 10px 27px var(--element-shadow-color);
}

.offer:nth-of-type(2) .offer__price {
  color: var(--vibrant-main-theme-color);
}

.offer:nth-of-type(2) .offer__button {
  background: var(--vibrant-main-theme-color);
  box-shadow: 5px 10px 14px var(--element-shadow-color);
}


/* RIGHT-HAND OFFER BOX */

.offer:last-of-type {
  border: 2px solid var(--tertiary-theme-color);
}

.offer:last-of-type .offer__price {
  color: var(--tertiary-theme-color);
}

.offer:last-of-type .offer__button {
  background: var(--tertiary-theme-color);
}


/* CONTACT SECTION */

.contact {
  padding: 100px;
  background: var(--base-color);
}

.contact .wrapper {
  justify-content: space-around;
}

/* LEFT-HAND CONTACT SECTION */

.contact__info {
  padding: 20px;
  min-width: 300px;
}

.contact__title {
  font-size: 49px;
}

.contact__text {
  margin: 30px auto;
  font-size: 16px;
}

.contact--parameter {
  position: relative;
  display: inline-block;
  color: var(--info-text-color);
}

.contact__info--directions {
  display: flex;
  justify-content: space-around;
}

.contact--parameter::before {
  position: absolute;
  top: -5px;
  left: -28px;
  content: '';
  height: 27px;
  width: 27px;
}

.contact__email-link::before {
  background: url("../assets/Mail Icon.svg");
}

.contact__tel-number {
  font-family: "Open Sans", sans-serif;
  font-size: 16px;
}

.contact__tel-number::before {
  background: url("../assets/Phone Icon.svg");
}

/* RIGHT-HAND CONTACT SECTION */

.contact__form {
  display: flex;
  flex-direction: column;
  max-width: 45%;
  min-width: 300px;
}

.contact__input--label {
  font-family: "Open Sans", sans-serif;
  font-size: 11px;
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 3px;
  color: var(--main-theme-color);
}

.contact__input {
  margin-bottom: 20px;
  line-height: 40px;
  border: none;
  border-bottom: 1px solid var(--info-text-color);
}

.contact__consent {
  position: relative;
  padding-left: 50px;
  font-family: "Open Sans", sans-serif;
  font-size: 12px;
  line-height: 17px;
  color: var(--info-text-color)
}

.contact--not-checkbox {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
}

.contact--checkbox {
  position: absolute;
  left: 5px;
  display: block;
  width: 24px;
  height: 24px;
  border: 1px solid var(--info-text-color);
  border-radius: 4px;
}

.contact--not-checkbox:checked + .contact__consent .contact--checkbox {
  background: url("../assets/Checkmark.svg") no-repeat center;
}

.contact__button {
  align-self: flex-end;
  font-family: "Open Sans", sans-serif;
  font-size: 13px;
  margin-top: 20px;
  padding: 20px 100px;
  box-shadow: 5px 10px 14px var(--element-shadow-color);
}


/* FOOTER */

.footer {
  position: relative;
  display: flex;
  justify-content: center;
  width: 100%;
  background: var(--secondary-bg-color);
  box-shadow: 0 -5px 40px var(--menu-shadow-color);
}

.footer .wrapper {
  justify-content: space-between;
}

.footer__logo {
  margin: 20px 0;
  display: flex;
  flex-direction: column;
}

.footer__logo--link {
  font-family: Raleway, sans-serif;
  font-size: 26px;
  color: var(--main-theme-color);
}

.copyright {
  margin-top: 10px;
  font-size: 11px;
  color: var(--info-text-color);
}

.footer__social-links {
  align-self: center;
  display: flex;
  justify-content: space-between;
  min-width: 70px;
}

